--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>THE BROWNSTREET JOURNAL </title>
-  <meta name="description" content="The HTML5 Herald">
+  <meta name="description" content="WOOO">
   <meta name="author" content="SitePoint">
 
    <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
